It2Me Host cleanup - Remove task_runner_

This member seems to have been used when we ran code using a plugin_task_runner
that was passed in to us, however that is no longer the case and we can now
use the host_context_ for all of our task running needs.  I also removed some
invalid DCHECKs that were required in the past, but were incorrectly updated
in previous CLs and are no longer useful.

BUG=650792

Review-Url: https://codereview.chromium.org/2380463005
Cr-Commit-Position: refs/heads/master@{#421905}

Former-commit-id: 61431fea97b63bf714d7b411e68b9321d09bbb38